cmake_minimum_required(VERSION 3.13)
project(test C)

set(CMAKE_C_STANDARD 99)

add_executable(test
        pt_digit.c
        lib_fn1.c
        lib_fn0.c
        lib_fn2.c
        lib_fn3.c
        fills.c
        ft_write_pt1.c
        ft_write_pt2.c
        ft_write_pt3.c
        ft_uns_digits.c
        perc_and_char.c
        pt_digit.c
        pt_string.c
        choose_type.c
        annonce_flags.c
        ft_printf.c
        rape_float.c
        write_main_press.c
        write_press.c
        ft_rapist.c
        min.c)